# multibind

./: .gitignore  .readthedocs.yaml  CHANGELOG  LICENSE  README.md  driver.py  pyproject.toml  setup.py
.github/workflows/: python-pytest.yml  tests.yml
docs/: api.rst  conf.py  index.rst  usage.rst
docs/tex/: Makefile  derivations.aux  derivations.tex  macroscopic_pkas.tex  mle.aux  mle.tex
examples/input/3-prot-and-2-bind/: graph.csv
examples/input/4-state-diamond/: graph.csv
examples/input/4-state-sodium-proton/: example_usage.py  graph.csv  states.csv
examples/input/canonical/: graph.csv  states.csv
examples/outputs/outputs/: test_rates.csv
examples/rates/inputs/inputs/: rates.csv
multibind/: __init__.py  chem.py  effective_binding_energies.py  multibind.py  nonequilibrium.py
tests/: analytic_4_states.mc  test_4_state.py  test_4_state_sodium_proton.py  test_io.py  test_scanner.py
tests/input/3-prot-and-2-bind/: states.csv
tests/input/4-state-diamond/: graph.csv  states.csv
tests/input/distortion_system/: graph.csv  states.csv
tests/rates/: test_thermo_rates.py
