[tool.poetry]
name = "multibind"
version = "0.1.0"
description = "A package to find optimal state free energies from a thermodynamic graph."
authors = ["Ian Kenney <ikenney@asu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tqdm = "^4.62.3"
numpy = "^1.21.4"
MDAnalysis = "^2.0.0"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
