[tool.poetry]
name = "multibind"
version = "0.2.0"
description = "A package to find optimal state free energies from a thermodynamic graph."
authors = ["Ian Kenney <ikenney@asu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
scipy = "^1.7.2"
networkx = "^2.6.3"
xarray = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.30.1"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
